@@ -48,19 +48,19 @@ output driver for PostScript
 .SY grops
 .RB [ \-glm ]
 .RB [ \-b\~\c
-.IR  n ]
+.IR  brokenness-flags ]
 .RB [ \-c\~\c
-.IR n ]
+.IR num-copies ]
 .RB [ \-F\~\c
-.IR dir ]
+.IR font-directory ]
 .RB [ \-I\~\c
-.IR dir ]
+.IR inclusion-directory ]
 .RB [ \-p\~\c
 .IR paper-format ]
 .RB [ \-P\~\c
 .IR prologue-file ]
 .RB [ \-w\~\c
-.IR n ]
+.IR rule-thickness ]
 .RI [ file\~ .\|.\|.]
 .YS
 .
@@ -314,7 +314,7 @@ Turn on manual feed for the document.
 .
 .
 .TP
-.BI \-p\~ paper-format
+.BI \-p\~ fmt
 Set physical dimensions of output medium,
 overriding the
 .BR \%papersize ,
@@ -325,7 +325,7 @@ directives in the
 .I DESC
 file.
 .
-.I paper-format
+.I fmt
 can be any argument accepted by the
 .B \%papersize
 directive;
@@ -334,9 +334,9 @@ see
 .
 .
 .TP
-.BI \-P\~ prologue-file
+.BI \-P\~ prologue
 Use the file
-.IR prologue-file ,
+.IR prologue ,
 sought in the
 .I groff
 font search path,
